fixed text overflow

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -99,6 +99,14 @@ a {
         }
     }
 
+    &__text-container {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        height: 54px;
+        overflow: hidden;
+    }
+
     &__text:not(:last-child) {
         margin-bottom: 20px;
     }
@@ -190,10 +198,6 @@ a {
         flex-direction: column;
         justify-content: center;
     }
-
-    .services__text:not(:first-child) {
-        display: none;
-    }
 }
 
 @media (min-width: 768px) {
@@ -235,9 +239,6 @@ a {
             }
         }
 
-        &__text:not(:first-child) {
-            display: block;
-        }
     }
 
 
@@ -325,6 +326,13 @@ a {
                 width: 50%;
                 height: 100%;
             }
+        }
+
+        &__text-container {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            height: fit-content;
         }
     }
 
